# piper-plus

./: .clang-format  .clang-tidy  .cmakelintrc  .codespell-ignore-words.txt  .codespellrc  .commitlintrc.json  .coverage  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .hadolint.yaml  .lychee.toml  .markdownlint.yaml  .mutmut.toml  .pre-commit-config.yaml  .ruffignore  .swiftformat  .swiftlint.yml  .yamllint.yaml  CHANGELOG-archive.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_MODELS.md  Dockerfile  Dockerfile.arm64  Dockerfile.armv7  ESPEAK_PATH_FIX.md  JAPANESE_USAGE.md  Makefile  OPENJTALK_BINARY_SETUP.md  OPENJTALK_IMPROVEMENTS.md  OPENJTALK_WINDOWS_BINARY.md  PR111_TEST_RESULTS.md  PUA_MAPPING_GUIDE.md  Package.ci.swift  (+71 more)
src/android/piper-android/: CMakeLists.txt  build.gradle.kts  consumer-rules.pro
src/cpp/tests/: CMakeLists.txt  debug_labels.c  test_c_api.cpp  test_c_api_audio_regression.cpp  test_c_api_concurrent_ja.cpp  test_c_api_g2p.cpp  test_c_api_integration.cpp  test_custom_dictionary.cpp  test_dictionary_manager.cpp  test_download_utils.cpp  test_g2p_parallelism.cpp  test_gpu_device_id.cpp  test_model_manager.cpp  test_model_speaker_detection.cpp  test_multilingual_g2p.cpp  test_openjtalk_error_handling.cpp  test_openjtalk_optimized.cpp  test_openjtalk_security.cpp  test_ort_session_contract.cpp  test_phoneme_parser.cpp  test_phoneme_timing.cpp  test_phoneme_timing_parity.cpp  test_phonemize.cpp  test_phonemize_config.cpp  test_piper_core.cpp  test_piper_proc_exec.cpp  test_prosody_inference.cpp  test_short_text_contract.cpp  test_short_text_mitigation.cpp  test_speaker_embedding.cpp  test_speaker_embedding_inference.cpp  test_speaker_encoder_e2e.cpp  test_speaker_encoder_golden.cpp  test_speaker_encoder_parity.cpp  test_split_sentences.cpp  test_ssml.cpp  test_streaming.cpp  test_streaming_raw_phonemes.cpp  test_streaming_simple.cpp  test_style_vector.cpp  (+5 more)
src/python/: README_REQUIREMENTS.md  README_training_japanese.md  check_environment.py  jp_phoneme_map.py  openjtalk_phonemizer.py  prepare_css10_japanese.py  pyproject.toml  pytest.ini  requirements-windows.txt  requirements.txt  requirements_dev.txt  requirements_test.txt  requirements_torch.txt  setup.py  test_phoneme_mapping.py  train_config_japanese.json  update_test_model.py
src/python/.claude/: settings.local.json
src/python/docs/: integrated-components-ja.md
src/python/g2p/: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
src/python/piper_plus/: __init__.py  _model_resolver.py  api.py  audio.py  engine.py
src/python/piper_train/: __init__.py  __main__.py  _compat.py  clean_cached_audio.py  export_generator.py  export_onnx.py  export_onnx_streaming.py  export_torchscript.py  extract_speaker_embedding.py  f0_extraction.py  filter_utterances.py  infer.py  infer_onnx.py  infer_onnx_streaming.py  infer_torchscript.py  inference_utils.py  model_manager.py  ort_utils.py  preprocess.py  train_multilingual.py  update_model_config.py  voice_conversion.py
src/python/piper_wyoming/: __main__.py  handler.py
src/python/scripts/: setup.sh
src/python/tests/: conftest.py  test_add_prosody_features.py  test_augmentation.py  test_augmentation_simple.py  test_basic.py  test_build_infer_forward.py  test_build_pea_style_bank.py  test_check_onnx_inputs.py  test_compat.py  test_convert_fp16.py  test_cross_runtime_style_vector.py  test_css10_ja_prep.py  test_custom_dict.py  test_dataset_getitem.py  test_dataset_parsers.py  test_ddp_strategy.py  test_ddp_synced_finite.py  test_dino_loss_diagnostics.py  test_download_crema_d.py  test_dp_lr.py  test_duration_discriminator.py  test_ema_callback.py  test_energy_vad.py  test_english_phonemizer.py  test_evaluate_emotion_finetune.py  test_export_onnx.py  test_export_onnx_mb_istft.py  test_extract_speaker_embedding.py  test_flow_debug.py  test_fly_decoder.py  test_freeze_dp.py  test_gin_channels.py  test_gradient_clip.py  test_hifigan_ckpt_rejection.py  test_infer_onnx.py  test_infer_onnx_cli.py  test_infer_onnx_config.py  test_infer_onnx_jsonl.py  test_infer_onnx_speaker_embedding_integration.py  test_infer_onnx_speaker_embedding_mask.py  (+58 more)
src/python_run/: MANIFEST.in  README.md  README_http.md  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_gpu.txt  requirements_webui.txt  setup.py
src/python_run/piper/: __init__.py  __main__.py  config.py  download.py  espeak_phonemizer.py  http_server.py  inference_config.py  sample_texts.py  text_splitter.py  timing.py  training_manager.py  util.py  voice.py  voices.json  webui.py
src/python_run/script/: format  lint  piper  setup
src/python_run/tests/: test_cli_models.py  test_config_fallback.py  test_download_resilience.py  test_english_phonemization.py  test_french_phonemization.py  test_http_server_root.py  test_http_timing.py  test_japanese_phonemization.py  test_json_input_cli.py  test_multilingual_integration.py  test_phoneme_timing.py  test_phoneme_timing_parity.py  test_pt_dialect_parity.py  test_runtime.py  test_short_text_mitigation.py  test_speaker_embedding.py  test_swedish_lid_runtime.py  test_text_splitter.py  test_text_splitter_contract.py  test_training_integration.py  test_training_manager.py  test_util_impl.py  test_voice_g2p_parallel.py  test_voice_speaker_embedding.py  test_voice_streaming.py  test_voice_style_vector.py  test_voice_timing.py  test_webui.py  test_zero_shot_e2e.py  test_zero_shot_parity_fixture.py  test_zh_en_loanword_runtime.py
src/rust/: Cargo.toml  clippy.toml  deny.toml  rustfmt.toml
src/rust/.cargo/: audit.toml
src/rust/piper-cli/: Cargo.toml
src/rust/piper-core/: Cargo.toml
src/rust/piper-g2p/: Cargo.toml  README.md
src/rust/piper-plus-g2p/: Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  cbindgen.toml
src/rust/piper-python/: Cargo.toml  pyproject.toml
src/rust/piper-wasm/: Cargo.toml
src/wasm/: .gitignore  CMakeLists.txt  README.md  build-demo.sh  build.sh  setup_env.sh
src/wasm/build-tools/: CMakeCache.txt  Makefile  cmake_install.cmake  (+2 more)
(+2682 files in other folders)
